# authenticator

./: .gitignore  .gitmodules  .metadata  Cargo.toml  README.md  build.rs  gen.sh  pubspec.yaml
.env/: env.json  env.json.example
dbs/: test.db
dbs/2023-11-15-170901_t_secret/: down.sql  up.sql
flutter/: .gitignore  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: .gitignore  build.gradle
flutter/android/app/: build.gradle
flutter/lib/: main.dart
flutter/lib/ffi/: bridge_gen.dart  ffi.dart
flutter/lib/home/: main_page.dart
flutter/lib/provider/: secret_list.dart
flutter/lib/repo/: dbhelper.dart  secret_repo.dart  tables.dart
flutter/linux/: CMakeLists.txt  rust.make
flutter/linux/flutter/: generated_plugins.cmake
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/rust_builder/: pubspec.yaml
flutter/rust_builder/android/: build.gradle  settings.gradle
flutter/rust_builder/ios/: rust_lib_authenticator.podspec
flutter/rust_builder/linux/: CMakeLists.txt
flutter/windows/: CMakeLists.txt  rust.make
lib/: main.dart
lib/components/: secret_item.dart  secret_list.dart
lib/model/: secret.dart
linux/: CMakeLists.txt  my_application.cc
migration/: .gitignore  Cargo.toml
migration/sql/: 20240608_000000_init.sql
migration/src/: lib.rs  m20240608_000000_init.rs
src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs  lib.rs
src/api/: api.rs
src/app/: app.rs  mod.rs
src/encoding/: base32.rs  mod.rs  urlencoded.rs
src/otp/: mod.rs  totp.rs
src/tools/: mod.rs
test/: widget_test.dart
(+41 files in other folders)
