[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
hmac = "0.12.1"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
sha1 = "0.10.5"
sha2 = "0.10.6"
simple-ntp = "0.1.1"
tokio = { version = "1", features = ["full"] }
flutter_rust_bridge = "1"
diesel = { version = "2.1.2", features = ["sqlite"] }

[lib]
name = "authenticatorlib"
crate-type = ["staticlib", "cdylib"]
