[package]
name = "rust_lib_authenticator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
flutter_rust_bridge = "=2.0.0-dev.37"
hmac = "0.12.1"
once_cell = "1.19.0"
sha1 = "0.10.6"
simple-ntp = "0.1.1"
sha2 = "0.10.8"
sea-orm = "0.12.15"

[build-dependencies]
anyhow = "^1"
flutter_rust_bridge_codegen = "=2.0.0-dev.37"
